Convert randomized housing test to use separate pages and local storage.

--- a/housing/word-bank/desktop-1.html
+++ b/housing/word-bank/desktop-1.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Housing 2</title>
-        <link rel="stylesheet" href="../src/img.css">
+        <title>Housing 1</title>
+        <link rel="stylesheet" href="../../src/img.css">
     </head>
     <body>
-        <img src="../img/housing/word-choice/Hero_2_mobile.jpg">
+        <img src="../../img/housing/word-bank/Hero_1_desktop.jpg">
     </body>
 </html>
