--- a/housing/word-bank/mobile-1.html
+++ b/housing/word-bank/mobile-1.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Housing 1</title>
-        <link rel="stylesheet" href="../src/img.css">
+        <link rel="stylesheet" href="../../src/img.css">
     </head>
     <body>
-        <img src="../img/housing/word-choice/Hero_1_mobile.jpg">
+        <img src="../../img/housing/word-bank/Hero_1_mobile.jpg">
     </body>
 </html>
