--- a/campaign/05032021-housing/mobile-all.html
+++ b/campaign/05032021-housing/mobile-all.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Housing Images</title>
-        <link rel="stylesheet" href="../src/img.css">
+        <link rel="stylesheet" href="src/css/img.css">
     </head>
     <body>
-        <img src="../img/housing/mobile-all.jpg">
+        <img src="src/img/mobile-all.jpg">
     </body>
 </html>
