--- a/campaign/10212020-archiving/version-a-desktop.html
+++ b/campaign/10212020-archiving/version-a-desktop.html
@@ -6,8 +6,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test</title>
-        <link rel="stylesheet" href="src/main.css">
-        <script src="src/main.js"></script>
+        <link rel="stylesheet" href="src/css/main.css">
+        <script src="src/js/main.js"></script>
     </head>
     <body>
         <div id="overlay">
@@ -17,6 +17,6 @@
                 and then click "Complete".
             </div>
         </div>
-        <img src="img/desktop-a.png">
+        <img src="src/img/desktop-a.png">
     </body>
 </html>
