--- a/campaign/05032021-housing/mobile-a.html
+++ b/campaign/05032021-housing/mobile-a.html
@@ -6,8 +6,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test</title>
-        <link rel="stylesheet" href="../src/randomize.css">
-        <script src="../src/randomize.js"></script>
+        <link rel="stylesheet" href="src/css/randomize.css">
+        <script src="src/js/randomize.js"></script>
     </head>
     <body>
         <div id="overlay" data-page-number="0">
@@ -19,10 +19,10 @@
             </div>
         </div>
         <div id="images">
-            <img src="../img/housing/desktop-1.png" style="display:none;">
-            <img src="../img/housing/desktop-2.png" style="display:none;">
-            <img src="../img/housing/desktop-3.png" style="display:none;">
-            <img src="../img/housing/desktop-4.jpg" style="display:none;">
+            <img src="src/img/mobile-1.png" style="display:none;">
+            <img src="src/img/mobile-2.png" style="display:none;">
+            <img src="src/img/mobile-3.png" style="display:none;">
+            <img src="src/img/mobile-4.jpg" style="display:none;">
         </div>
     </body>
 </html>
