--- a/campaign/05032021-housing/mobile-c.html
+++ b/campaign/05032021-housing/mobile-c.html
@@ -6,11 +6,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test</title>
-        <link rel="stylesheet" href="../src/randomize.css">
-        <script src="../src/randomize.js"></script>
+        <link rel="stylesheet" href="src/css/randomize.css">
+        <script src="src/js/randomize.js"></script>
     </head>
     <body>
-        <div id="overlay" data-page-number="3">
+        <div id="overlay" data-page-number="2">
             <div id="instructions">
                 <div id="task-instructions" style="display:none;">
                     Follow directions in the task.
@@ -19,10 +19,10 @@
             </div>
         </div>
         <div id="images">
-            <img src="../img/housing/mobile-1.png" style="display:none;">
-            <img src="../img/housing/mobile-2.png" style="display:none;">
-            <img src="../img/housing/mobile-3.png" style="display:none;">
-            <img src="../img/housing/mobile-4.jpg" style="display:none;">
+            <img src="src/img/mobile-1.png" style="display:none;">
+            <img src="src/img/mobile-2.png" style="display:none;">
+            <img src="src/img/mobile-3.png" style="display:none;">
+            <img src="src/img/mobile-4.jpg" style="display:none;">
         </div>
     </body>
 </html>
