--- a/campaign/05032021-housing/word-bank/desktop-3.html
+++ b/campaign/05032021-housing/word-bank/desktop-3.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Housing 3</title>
-        <link rel="stylesheet" href="../../src/img.css">
+        <link rel="stylesheet" href="../src/css/img.css">
     </head>
     <body>
-        <img src="../../img/housing/word-bank/Hero_3_desktop.jpg">
+        <img src="../src/img/word-bank/Hero_3_desktop.jpg">
     </body>
 </html>
