--- a/campaign/05032021-housing/word-bank/mobile-3.html
+++ b/campaign/05032021-housing/word-bank/mobile-3.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Housing 2</title>
-        <link rel="stylesheet" href="../../src/img.css">
+        <title>Housing 3</title>
+        <link rel="stylesheet" href="../src/css/img.css">
     </head>
     <body>
-        <img src="../../img/housing/word-bank/Hero_2_desktop.jpg">
+        <img src="../src/img/word-bank/Hero_3_mobile.jpg">
     </body>
 </html>
