--- a/campaign/07152021-homepage/word-bank/desktop-3.html
+++ b/campaign/07152021-homepage/word-bank/desktop-3.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Housing 3</title>
+        <title>Test</title>
         <link rel="stylesheet" href="../src/css/img.css">
     </head>
     <body>
