Update images and file extensions

--- a/campaign/07152021-homepage/desktop-random.html
+++ b/campaign/07152021-homepage/desktop-random.html
@@ -25,9 +25,9 @@
         </div>
         <div id="images">
             <img src="src/img/desktop-1.png" style="display:none;">
-            <img src="src/img/desktop-2.jpg" style="display:none;">
-            <img src="src/img/desktop-3.jpg" style="display:none;">
-            <img src="src/img/desktop-4.jpg" style="display:none;">
+            <img src="src/img/desktop-2.png" style="display:none;">
+            <img src="src/img/desktop-3.png" style="display:none;">
+            <img src="src/img/desktop-4.png" style="display:none;">
         </div>
     </body>
 </html>
