--- a/campaign/07152021-homepage/desktop-all.html
+++ b/campaign/07152021-homepage/desktop-all.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="src/css/img.css">
     </head>
     <body>
-        <img src="src/img/desktop-all.jpg">
+        <img src="src/img/desktop-all.png">
     </body>
 </html>
