--- a/campaign/07152021-homepage/word-bank/desktop-1.html
+++ b/campaign/07152021-homepage/word-bank/desktop-1.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="../src/css/img.css">
     </head>
     <body>
-        <img src="../src/img/word-bank/Hero_1_desktop.jpg">
+        <img src="../src/img/word-bank/Hero_1_desktop.png">
     </body>
 </html>
